--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </nav>
     <main>
       <h1 class="humanjs">HumanJS</h1>
-      <h2 id="quick-start">Quick Start</h2>
+      <h2>Quick Start</h2>
       <ol>
         <li><a href="http://nodejs.org/">install node.js</a></li>
         <li>install humanjs
@@ -34,7 +34,7 @@
         <li>open your browser to: <code>http://localhost:3000</code></li>
         <li>that's it!</li>
       </ol>
-      <h4>What's included?</h4>
+      <h3>What's included?</h3>
       <ul>
         <li>Well-architected shell of a single page app to serve as a starting point for your app.</li>
         <li>A solution for using jade templates and templatizer to pre-compile client templates.</li>
@@ -47,13 +47,13 @@
         <li>A solution for declaritive binding of model properties to views, that is <em>completely</em> decoupled from the template engine. See human-view below for more details.</li>
         <li>A solution for creating readable, type-checked, and very explicitly defined models. This is hugely important in team enviroments where you need somewhere to reference what is being stored on your models. See human-model for more detail.</li>
       </ul>
-      <h2 id="introduction">Introduction</h2>
+      <h2>Introduction</h2>
       <p>There are lots of toolkits for building single page apps or "Native HTML5 Apps" if you will. It seems they're either too generic and unopinionated or too tightly coupled or require a lot of knowledge and understanding of the framework. After having built lots of single page apps with various tools at <a href="http://andyet.com">&yet</a> we've surmised that the ideal seems to lie somewhere in the middle. </p>
       <p>Ultimately we'd like something that is comprised of lots of independent little tools that each to one thing (see <a href="http://www.faqs.org/docs/artu/ch01s06.html">Unix philosophy</a>).</p>
       <p>That said, starting with a group of completely unassembled little pieces is inefficient because there are lots of patterns common to <em>most</em> apps. So we need an opinionated starting point.</p>
       <p>That's how HumanJS was born. Some of it simply uses <a href="http://backbonejs.org">Backbone.js</a> as is.</p>
       <p>It's not really a framework, it's a bag of pre-assembled little tools that you're free to rip apart and add to. </p>
-      <h3 id="goals">Goals</h3>
+      <h3>Goals</h3>
       <ul>
         <li>Readability</li>
         <li>Flexibility</li>
@@ -71,17 +71,20 @@
         <li>Provide an opinionated starting point</li>
         <li>Use npm + browserify for package management but still play nicely with non-common JS libraries.</li>
       </ul>
-      <h3 id="downloads">downloads</h3>
+      <h3>downloads</h3>
       <ol>
         <li>humanjs (scaffolding / docs) <a href="https://github.com/henrikjoreteg/humanjs">github</a> <a href="https://npmjs.org/package/humanjs">npm</a></li>
         <li>human-model <a href="https://github.com/henrikjoreteg/human-model">github</a> <a href="https://npmjs.org/package/human-model">npm</a></li>
         <li>human-view <a href="https://github.com/henrikjoreteg/human-view">github</a> <a href="https://npmjs.org/package/human-view">npm</a></li>
         <li>backbone.js <a href="https://github.com/jashkenas/backbone">github</a> <a href="https://npmjs.org/package/backbone">npm</a></li>
       </ol>
-      <h2 id="human-model" data-nav="human-model">human-model <small><a href="https://github.com/henrikjoreteg/human-model">github.com/henrikjoreteg/human-model</a></small></h2>
+      <h2 data-nav="The Book">Human JavaScript book</h2>
+      <p>A 100+ page e-book providing additional context, explanations and philosophy behind the tools documented here <a href="http://humanjavascript.com">is available for $29</a>.</p>
+      <p> <a href="http://humanjavascript.com"><img src="/docs/images/human-javascript.png" width="200" alt="human javascript ebook"></a></p>
+      <h2 data-nav="human-model">human-model <small><a href="https://github.com/henrikjoreteg/human-model">github.com/henrikjoreteg/human-model</a></small></h2>
       <p>Models are the core of app because they are responsible for storing all the application's state. Very likely if you're looking at the DOM to determine the state of application that state information that you should consider storing as a property on a model instead.</p>
       <p>Since models play such a central role in a single-page app they should really serve as documentation for how the app is structured. We want to be able to look at code for a Model and know exactly what type of data is stores. This is hugely important for enabling teams to work on the same app together.</p>
-      <h3 id="types-of-state">Types of state</h3>
+      <h3>Types of state</h3>
       <p>Take for instance a <code>selected</code> property on a model. That's likely something you would use to represent current UI state for the current browser session but not something you'd want to save back to the API when calling a model's <code>.save()</code> method. So there really are two types of state. It's challenging to make that type of distinction with Backbone. </p>
       <p>HumanModel supports three types of state that will get stored on a model: 
         <ul>
@@ -91,21 +94,20 @@
         </ul>
       </p>
       <p>In human model you have to classify all your properties as either <code>prop</code> or a <code>session</code>. That includes declaring your <code>id</code> property. How HumanModel handles properties that you have not pre-defined is determined by its <code>extraProperties</code> setting. But, by default properties that are <code>.set()</code> on a model that you have not defined are simply ignored.</p>
-      <h3 id="model-relationships" data-nav="model relationships">Handling model relationships</h3>
+      <h3 data-nav="model relationships">Handling model relationships</h3>
       <p>From our experience, <code>derived</code> properties work really well for handling relationships between models. Let's say you've got a model representing people and model representing a group of people. Often your API for fetching people would include something like a <code>groupID</code> as a property for each person you retrieve.</p>
-      <h3 id="model-backbone" data-nav="comparing w/ backbone">comparing with Backbone.Model</h3>
+      <h3 data-nav="comparing w/ backbone">comparing with Backbone.Model</h3>
       <p>If you're familiar with Backbone.js, HumanModel is a Backbone-compatible alternative to Models. </p>
       <p>The key differences are as follows:</p>
       <ol> 
         <li>There is no <code>extend</code> it's called <code>define</code> instead because it's doing something fundamentally different than what Backbone does with <code>extend</code>. Backbone's <code>extend</code> is simply extending a Backbone Model's prototype directly. Whereas Human Model's <code>define</code> is a way of describing a set of properties that will be used to generate a prototype with getters and setters that store the types of values you describe in your definition. However, you can still use it very similarly because any methods you pass as part of your definition are attached to the prototype.</li>
-        <li> </li>
       </ol>
-      <h3 id="model-define" data-nav="define">define <code>HumanModel.define()</code></h3>
+      <h3 data-nav="define">define <code>HumanModel.define()</code></h3>
       <p>The define method returns a constructor that can be used to generate instances of your model. </p>
       <p>It takes a single object that describes model's properties (<code>props</code>), session properties (<code>session</code>), derived properties (<code>derived</code>) and any methods you'd like to attach to the model's prototype. These special property descriptions are exaplained individually below.</p>
-      <h4 id="model-props" data-nav="props">props <code>props: {}</code></h4>
-      <h4 id="model-session" data-nav="session">session <code>session: {}</code> </h4>
-      <h4 id="model-derived" data-nav="derived">derived <code>derived: {}</code> </h4>
+      <h4 data-nav="props">props <code>props: {}</code></h4>
+      <h4 data-nav="session">session <code>session: {}</code> </h4>
+      <h4 data-nav="derived">derived <code>derived: {}</code> </h4>
       <p>The classic example of a derived property would be creating a <code>fullName</code> property that combined <code>firstName</code> and <code>lastName</code>.</p>
       <p>They are also ideal for handling relationships between other models you have on the client.</p>
       <p>Derived properties are defined as follows:</p>
@@ -132,17 +134,17 @@
       <h4><code>cache</code> (optional, boolean, default: false)</h4>
       <p>If <code>cache: true</code> the property will be computed and cached on first access. The cached value is cleared if any of the <code>deps</code> properties change and will only be recomputed next time it's accessed. </p>
       <p>If <code>cache: false</code> the property is recomputed each time it's accessed.</p>
-      <h4 id="model-type" data-nav="type">type <code>model.type</code></h4>
-      <h4 id="model-initialize" data-nav="initialize">initialize <code>model.initialize()</code></h4>
+      <h4 data-nav="type">type <code>model.type</code></h4>
+      <h4 data-nav="initialize">initialize <code>model.initialize()</code></h4>
       <p>This is a no-op by default. It is called as part of the model's constructor. If defined it will be passed the same arguments that were passed to the constructor.</p>
-      <h2 id="human-view" data-nav="human-view">human-view <small><a href="https://github.com/henrikjoreteg/human-view">github.com/henrikjoreteg/human-view</a></small></h2>
-      <h3 id="view-el">el</h3>
-      <h3 id="view-initialize">initialize</h3>
-      <h3 id="view-render">render</h3>
-      <h3 id="view-render-and-bind">renderAndBind</h3>
+      <h2 data-nav="human-view">human-view <small><a href="https://github.com/henrikjoreteg/human-view">github.com/henrikjoreteg/human-view</a></small></h2>
+      <h3>el</h3>
+      <h3>initialize</h3>
+      <h3>render</h3>
+      <h3>renderAndBind</h3>
       <p>This is a convenience method which will render the template and fully replace the root element with the rendered template content.</p>
       <p>Either define a <code>template</code> property in your view, or pass in a template directly. The template can either be a function or a string. If the template is a function, it will be passed the <code>context</code> argument.</p>
-      <h3 id="view-render-collection">renderCollection</h3>
+      <h3>renderCollection</h3>
       <p>human-view includes a <code>renderCollection</code> method that works as follows:</p>
       <pre>// some view for individual items in the collection
 var ItemView = StrictView.extend({ ... });
@@ -173,14 +175,14 @@ var MainView = StrictView.extend({
 })
 </pre>
       <p>The <code>renderCollection()</code> call will maintain the collection within the <code>.itemContainer</code> element, including proper handling of add, remove, sort, reset, etc. You can optionally specify a filter function or choose to reverse the collection when rendering.</p>
-      <h4 id="view-listen-to-and-run">listenToAndRun</h4>
+      <h4>listenToAndRun</h4>
       <p>
          
         The same as Backbone's <code>listenTo()</code>, except it will call handler immediately after applying the listener.
       </p>
-      <h3 id="view-bindings">bindings</h3>
+      <h3>bindings</h3>
       <p>Bindings are view-level objects that map model properties to specific DOM selectors in the view's template. Once bindings are declared, human-view will automatically update the appropriate DOM elements or attributes when the bound model property changes.</p>
-      <h4 id="bindings-text">textBindings</h4>
+      <h4>textBindings</h4>
       <p>Text bindings are used to directly bind the inner text of an element to the model.</p>
       <pre>textBindings: {
     liveStreamCount: '.live-stream-count'
@@ -189,7 +191,7 @@ var MainView = StrictView.extend({
 &lt;div class='.live-stream-count'&gt;0&lt;/div&gt;
 </pre>
       <p>Here, the contents of the <code>.liveStreamCount</code> element (or elements) within the view will be replaced with and bound to the value retrived by <code>model.get('liveStreamCount')</code>.</p>
-      <h4 id="bindings-src">srcBindings</h4>
+      <h4>srcBindings</h4>
       <p>Source bindings are used to bind the <code>src</code> attribute of a DOM element to the model.</p>
       <pre>srcBindings: {
     userProfilePic: 'img .profile-pic'
@@ -198,7 +200,7 @@ var MainView = StrictView.extend({
 &lt;img class='profile-pic' src='' alt='Profile Picture' /&gt;
 </pre>
       <p>Here, the <code>src</code> tag of the <code>.profile-pic</code> image element will be bound to <code>model.get('userProfilePic')</code>.</p>
-      <h4 id="bindings-href">hrefBindings</h4>
+      <h4>hrefBindings</h4>
       <p>You're probably getting the idea by now, but href bindings are just like the src bindings, but for the <code>href</code> attribute.</p>
       <pre>hrefBindings: {
     logoutURL: 'a .logout'
@@ -207,7 +209,7 @@ var MainView = StrictView.extend({
 &lt;a class='logout' href=''&gt;Logout&lt;/a&gt;
 </pre>
       <p>Here, the <code>href</code> tag of the <code>.logout</code> anchor element will be bound to <code>model.get('logoutURL')</code>.</p>
-      <h4 id="bindings-class">classBindings</h4>
+      <h4>classBindings</h4>
       <p>Class bindings are a bit special. They maintain a class on the element according to the following rules:</p>
       <ol>
         <li><strong>If the bound property is a boolean</strong>: the name of the property will be used as the name of the class. The class will be present on the element when the boolean is <code>true</code>, and removed when the propety is <code>false</code>.
@@ -242,24 +244,59 @@ model.set('status', 'away'); // `available` class will be removed and `away` cla
 </pre>
         </li>
       </ol>
-      <h2 id="router">router</h2>
+      <h2>router</h2>
       <p>HumanJS just uses Backbone's router so just <a href="http://backbonejs.org/#Router">see backbone's router docs for more info</a>.</p>
-      <h2 id="moonboots">Moonboots</h2>
-      <h2 id="finding-modules">Finding modules</h2>
-      <p>There's a site containing a curated list of npm-installable modules with a quick filter box: <a href="http://projects.joreteg.com/humanjs-resources/">humanjs-resources</a> that should help you find things you may need. </p>
+      <h2 data-nav="moonboots">moonboots <small><a href="https://github.com/henrikjoreteg/moonboots">github.com/henrikjoreteg/moonboots</a></small></h2>
+      <p>Moonboots is a tool to help you intelligently deal with different goals of serving JS during development and in production.</p>
+      <p>In development we explicitly don't want to cache or minify our JS and CSS files while working. We want to organize our modules in a way that makes the most sense for us as we're building the app.</p>
+      <p>In production, we want to use the exact same source code structure to generate a single minified, uniquely named file for the JS and the CSS so we can tell the browser to cache those permanently. If we do our job correctly when serving those files, our main application code will be downloaded once per revision of the app.</p>
+      <p>Moonboots aims to solve this problem. You structure your entire application in the same way that you would in node with Common JS modules requiring each other. It uses browserify under the hood to do all that magic. But then you just configure your client application like so: </p>
+      <h3>moonboots + express.js</h3>
+      <p>The full documentation for moonboots is <a href="https://github.com/henrikjoreteg/moonboots#readme">available in the moonboots repo</a>. </p>
+      <p>For a preview, here's how we'd configure a clientside moonboots app to be served by express:</p>
+      <pre>var express = require('express'),
+    Moonboots = require('moonboots'),
+    app = express();
+    
+// configure our app
+var clientApp = new Moonboots({
+    main: __dirname + '/sample/app/app.js',
+    developmentMode: false,
+    libraries: [
+        __dirname + '/sample/libraries/jquery.js'
+    ],
+    stylesheets: [
+        __dirname + '/styles.css'
+    ],
+    server: app
+});
+
+// We also just need to specify the routes at which we want to serve this clientside app.
+// This is important for supporting &quot;deep linking&quot; into a single page app. The server
+// has to know what urls to let the browser app handle.
+app.get('*', clientApp.html());
+
+// start listening for http requests
+app.listen(3000);
+</pre>
+      <h3>moonboots + hapi</h3>
+      <p>If you're using hapi, there's <a href="https://github.com/wraithgar/moonboots-hapi">a version of moonboots that is structured as a hapi plugin</a>. </p>
+      <h2>Finding modules</h2>
+      <p>There's a site containing a curated list of npm-installable modules with a quick filter box: <a href="http://resources.humanjavascript.com">humanjs-resources</a> that should help you find things you may need. </p>
       <p>Also, there are lots of modules you can find via <a href="http://browserify.org/search">browserify's module search</a>.</p>
-      <h2 id="examples">Examples</h2>
-      <h3 id="andbang">And Bang</h3>
+      <h2>Examples</h2>
+      <h3>And Bang</h3>
       <p>And Bang helps same-page-ify your team with shared tasks and chat. </p>
       <p>Many of the tools and approaches of human javascript were extracted from And Bang.</p><a href="http://andbang.com"><img src="https://i.cloudup.com/p3kLPyMYDw-2000x2000.png" width="400" class="exampleImage"></a>
-      <h3 id="talky">Talky</h3>
+      <h3>Talky</h3>
       <p>Talky is truly simple video chat and screen sharing app for groups.</p>
       <p>Powered by WebRTC and built on human javascript.</p><a href="https://talky.io"><img src="https://i.cloudup.com/0c5WD7hIUb-2000x2000.png" width="400" class="exampleImage"></a>
-      <h4 id="resources">The resources app</h4>
+      <h3>The resources app</h3>
       <p>Quick module search of curated modules. The source for this app is <a href="https://github.com/henrikjoreteg/humanjs-resources">available on github</a>.</p><a href="http://resources.humanjavascript.com"><img src="https://i.cloudup.com/XhYHvX7FA5-2000x2000.png" width="400" class="exampleImage"></a>
     </main>
   </body>
   <script src="docs/js/highlight.pack.js"></script>
+  <script src="docs/js/slugger.js"></script>
   <script src="docs/js/setup.js"></script>
   <script src="http://static.andyet.com/tag.js"></script>
 </html>
